# tidb

./: errors.toml  go.mod  go.sum
docs/superpowers/plans/: 2026-03-10-import-into-error-codes.md
docs/superpowers/specs/: 2026-03-18-mv-index-fast-check-phase-c-design.md  2026-03-18-mv-index-fast-check-refactor-design.md
lightning/pkg/importer/: chunk_process.go  get_pre_info.go  get_pre_info_test.go
pkg/ddl/: backfilling_dist_executor.go  backfilling_dist_scheduler.go  backfilling_dist_scheduler_test.go  backfilling_import_cloud.go  backfilling_merge_sort.go  backfilling_merge_temp.go  backfilling_operators.go  backfilling_read_index.go  column.go  ddl.go  executor.go  index.go  index_nokit_test.go  job_submitter.go  modify_column.go  multi_schema_change.go  multi_schema_change_test.go  reorg.go  reorg_util.go  table_mode.go
pkg/distsql/: select_result.go
pkg/disttask/importinto/: scheduler.go  scheduler_testkit_test.go  task_executor.go
pkg/domain/: domain.go
pkg/dxf/importinto/: clean_up.go  job.go  planner.go  (+7 more)
pkg/errno/: errcode.go  errname.go
pkg/executor/: BUILD.bazel  builder.go  check_table_index.go  infoschema_reader.go  load_data.go  select.go
pkg/expression/: builtin_json.go  builtin_json_vec.go  infer_pushdown.go
pkg/infoschema/: infoschema.go  infoschema_v2.go
pkg/kv/: kv.go
pkg/meta/: meta.go
pkg/objstore/: gcs.go
pkg/parser/: lexer.go  misc.go  parser.y  parser_test.go  yy_parser.go
pkg/server/: http_status.go
pkg/util/prefetch/: BUILD.bazel  parallel_reader.go  parallel_reader_test.go
tools/coverage-rank/: BUILD.bazel
(+81 files in other folders)
