load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "coverage-rank_lib",
    srcs = [
        "extract.go",
        "main.go",
        "score.go",
        "types.go",
    ],
    importpath = "github.com/pingcap/tidb/tools/coverage-rank",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "coverage-rank",
    embed = [":coverage-rank_lib"],
    visibility = ["//visibility:public"],
)
